[package]
name = "bms-logcat"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
atty = "0.2"
byteorder = "1.4"
byte_struct = "0.7.1"
camino = "1.0.7"
clap = { version = "3.1", features = ["derive"] }
enum-iterator = "0.7.0"
log = "0.4"
num_enum = "0.5.7"
simplelog = { version = "0.12", features = ["test", "termcolor"] }
